Adding swagger attribute annotations and refactoring the filter query
