# app/Http/Controllers/Controller.php
@@ -2,18 +2,13 @@
 
 namespace App\Http\Controllers;
 
-/**
- * @OA\Info(
- * title="Warehouse-Swagger-Api",
- * version="1.0.0"
- * )
- *  @OA\SecurityScheme(
- *      securityScheme="bearerAuth",
- *      type="http",
- *      scheme="bearer",
- *      bearerFormat="custom"
- * )
- */
+use OpenApi\Attributes as OA;
+
+
+#[
+    OA\Info(version: "1.0.0",  title: "Warehouse-API Documentation"),
+    OA\SecurityScheme( securityScheme: 'bearerAuth', type: "http", name: "Authorization", in: "header", scheme: "bearer"),
+]
 abstract class Controller
 {
     //
